<resources>
    <string name="app_name">PeeBuddy</string>
    <string name="title_activity_home">Pee Buddy</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="strRate">Rate</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="must_be_logged_in">Become a Pee Buddy - Help tell others about the best place to go!</string>
    <string name="pw_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="app_title">Pee Buddy</string>
    <string name="click_here_to_register">Don\'t have an account? Tap here to get one</string>
    <string name="click_here_to_login">Already have an account? Tap here to log in</string>
    <string name="logout">Logout</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
</resources>
