<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorAccent" android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:text="@string/app_title"
        android:textAlignment="center" android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="30sp"/>
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="200dp" android:layout_height="200dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo_white"/>
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp" android:text="@string/must_be_logged_in"
        android:textAlignment="center"
        android:textSize="18sp"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/primaryText"
        app:hintTextAppearance="@style/MyTextAppearance">
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp" android:layout_marginRight="30dp"
            android:layout_marginTop="10dp" android:layout_marginBottom="10dp"
            android:ems="10"
            android:textIsSelectable="true"
            android:hint="@string/email_hint"
            android:cursorVisible="true" android:textCursorDrawable="@null"
            android:inputType="textEmailAddress" android:maxLines="1"
            android:drawableLeft="@drawable/ic_email_black_24dp"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/primaryText"
        app:hintTextAppearance="@style/MyTextAppearance">
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp" android:layout_marginRight="30dp"
        android:layout_marginTop="20dp" android:ems="10"
        android:hint="@string/pw_hint"
        android:textIsSelectable="true"
        android:inputType="textPassword"
        android:cursorVisible="true" android:textCursorDrawable="@null"
        android:drawableLeft="@drawable/ic_lock_black_24dp"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:background="@color/colorPrimaryDark"
        android:text="@string/login" android:textSize="20sp"/>
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:background="@color/colorPrimary"
        android:text="@string/register"
        android:visibility="gone"  android:textSize="20sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >
        <TextView
        android:id="@+id/tvSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:text="@string/click_here_to_register"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"/>
        </LinearLayout>
</LinearLayout>